--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,27 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.container {
+  margin: auto;
+  width: 50%;
+  margin-top: 2%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr) )
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.item {
+  padding: 7%;
+  border: 2px solid #c8cad4;
+  width: 70%;
+  margin: auto;
+  margin-bottom: 2%;
+  border-radius: 5%;
+ 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.MuiAppBar-colorPrimary{
+  background-color: #050f3b !important;
+  box-shadow: none !important;
+  text-align: center !important;
 }
